<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bk"
    android:orientation="vertical">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:src="@mipmap/tilu"/>

    <EditText
        android:id="@id/user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/user_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="numberPassword"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="22sp"/>

    <TextView
        android:id="@id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/new_user"
        android:textColor="@color/qq_blue"/>

</LinearLayout>